PyMaker/datas/object2/RawHTML/i3101/Python_DOC_referPages.using-python-play-scraper-module-cannot-retrieve-data-using-module.txt
<div class="post-text" itemprop="text">
<p>Here is the link to the module:<a href="https://github.com/danieliu/play-scraper" rel="nofollow noreferrer">https://github.com/danieliu/play-scraper</a> </p>
<p>I am looking to scrape a collection from the google play store for a project. </p>
<p>I run the following code. </p>
<pre><code>import play_scraper
print play_scraper.collection(
        collection='COMMUNICATION',
        category='TOP COMMUNICATION APPS',
        results=5,
        page=1
</code></pre>
<p>Traceback:</p>
<pre><code>SyntaxError: in File "Play-scrape.py", line 2, in &lt;module&gt;
             print  play_scraper.collection(
                             ^
</code></pre>
<p><strong>Update</strong></p>
<p>I use python3 when running code and updated my print statements to include brackets. </p>
<p>Now I receive the error </p>
<pre><code>    /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: greenlet.greenlet size changed, may indicate binary incompatibility. Expected 144, got 128
  return f(*args, **kwds)
/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/grequests.py:21: MonkeyPatchWarning: Monkey-patching ssl after ssl has already been imported may lead to errors, including RecursionError on Python 3.6. It may also silently lead to incorrect behaviour on Python 3.7. Please monkey-patch earlier. See https://github.com/gevent/gevent/issues/1016. Modules that had direct imports (NOT patched): ['urllib3.contrib.pyopenssl (/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/urllib3/contrib/pyopenssl.py)', 'urllib3.util (/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/urllib3/util/__init__.py)']. 
  curious_george.patch_all(thread=False, select=False)
Traceback (most recent call last):
  File "Play-scrape.py", line 9, in &lt;module&gt;
    print (play_scraper.search('dogs', page=2))
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/play_scraper/api.py", line 79, in search
    return s.search(query, **kwargs)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/play_scraper/scraper.py", line 481, in search
    response = send_request('POST', self._search_url, data, params)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/play_scraper/utils.py", line 124, in send_request
    allow_redirects=allow_redirects)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/requests/api.py", line 58, in request
    return session.request(method=method, url=url, **kwargs)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/requests/sessions.py", line 503, in request
    prep.url, proxies, stream, verify, cert
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/requests/sessions.py", line 676, in merge_environment_settings
    env_proxies = get_environ_proxies(url, no_proxy=no_proxy)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/requests/utils.py", line 760, in get_environ_proxies
    if should_bypass_proxies(url, no_proxy=no_proxy):
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/requests/utils.py", line 744, in should_bypass_proxies
    bypass = proxy_bypass(parsed.hostname)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/urllib/request.py", line 2610, in proxy_bypass
    return proxy_bypass_macosx_sysconf(host)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/urllib/request.py", line 2587, in proxy_bypass_macosx_sysconf
    return _proxy_bypass_macosx_sysconf(host, proxy_settings)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/urllib/request.py", line 2560, in _proxy_bypass_macosx_sysconf
    hostIP = socket.gethostbyname(hostonly)
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/gevent/_socketcommon.py", line 163, in gethostbyname
    return get_hub().resolver.gethostbyname(hostname)
  File "src/gevent/_hub_local.py", line 73, in gevent.__hub_local.get_hub_noargs
  File "src/gevent/_hub_local.py", line 80, in gevent.__hub_local.get_hub_noargs
  File "/Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages/gevent/hub.py", line 390, in __init__
    WaitOperationsGreenlet.__init__(self, None, None)
  File "src/gevent/_greenlet_primitives.py", line 42, in gevent.__greenlet_primitives.TrackedRawGreenlet.__init__
SystemError: /Users/sysadmin/build/v3.7.0/Objects/dictobject.c:1439: bad argument to internal function
</code></pre>
<p>I am new to python and scripts, and any advice on how to move forward on this issue would be much appreciated. I know this a basic problem and apologise if it's easily answerable elsewhere. </p>
<p>-- NOTE: Originally helped on syntax because I was not adding in the bracket in accordance to python3 syntax and was receiving a syntax error. I now return this error in my terminal. </p>
</div>
<div class="post-text" itemprop="text">
<p>You are probably on python 3.x, where <a href="https://docs.python.org/3/whatsnew/3.0.html" rel="nofollow noreferrer">print statements need brackets</a></p>
<p>try </p>
<pre><code>print(play_scraper.collection(
      collection='COMMUNICATION',
      category='TOP COMMUNICATION APPS',
      results=5,
      page=1))
</code></pre>
<p>For your second issue</p>
<p>try running</p>
<pre><code>pip3 install play-scraper -U
</code></pre>
<p>To make sure you have the latest requirements. Note <code>pip -&gt; python2.x, pip3 -&gt; python3.X</code></p>
</div>
<span class="comment-copy">I just ran the code now and I go the same issue and the terminal also returned the same syntax error. Am I running the module completely wrong? In theory, does it look correct the code I am running to extract data via the module?</span>
<span class="comment-copy">on your terminal run <code>python --version</code>,  if you have <code>3.x.x</code>, put brackets on all you print statements! This is a <code>SyntaxError </code> and has nothing to do with <code>play_scraper</code></span>
<span class="comment-copy">Ok, just ran version and I have 2.7.10 - I'll install now the latest version.</span>
<span class="comment-copy">I have updated the original question because I now receive a new error after improving formatting.</span>
<span class="comment-copy">You should upvote if this helped you first question. Then i can help on the next</span>
